test/parser/positive/This.java
public class This {
  public This() {}
  public This returnThis() {
    return this;
  }
}
