test/parser/negative/ExplicitThisCall.java
public class A {
  public A() {  this(); }
}
